[package]
name = "dlpq"
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2024"
description = "Data layer for download a SQL Server table to a parquet file."
repository = "https://github.com/ko222uky/dlpq"
readme = "README.md"
[dependencies]

######################################################################
# our main dataframe library
######################################################################

polars = {version = "0.54.4", features = ["parquet"]}

######################################################################
# Wrapper for SQL Server TDS 7.3
######################################################################

tiberius = {version = "0.12.3", features = ["tokio", "chrono", "tds73", "winauth"]}


######################################################################
# for asynchronous I/O so main() isn't blocked while waiting...
######################################################################

futures = "0.3.32"
tokio = {version = "1.52.3", features = ["net", "io-util"]}
tokio-util = {version = "0.7.18", features = ["compat"] }

######################################################################
# Other
######################################################################

anyhow = "1.0.103"
chrono = "0.4.45"

